# mdCodeV

./: .gitignore  package-lock.json  package.json
.mdcodev/plugins/: qb-strict-lint.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: app-commands.toml
apps/desktop/src-tauri/src/: ai_keychain.rs  fs.rs  fxserver.rs  game.rs  lib.rs  main.rs  plugins.rs  remote.rs  sql.rs  sql_keychain.rs
apps/desktop/src/components/: AgentPanel.module.css  AgentPanel.tsx  AiWriteDiffModal.module.css  AiWriteDiffModal.tsx  DatabasePanel.module.css  DatabasePanel.tsx  EditorGroup.module.css  EditorGroup.tsx  EditorWorkspace.module.css  EditorWorkspace.tsx  FileExplorer.module.css  FileExplorer.tsx  MarketplacePanel.module.css  MarketplacePanel.tsx  MigrationPanel.module.css  MigrationPanel.tsx  NativeDetail.module.css  NativeDetail.tsx  NativesExplorer.module.css  NativesExplorer.tsx  PluginsPanel.module.css  PluginsPanel.tsx  ProblemsPanel.module.css  ProblemsPanel.tsx  ProfilerPanel.module.css  ProfilerPanel.tsx  RemoteConnectModal.module.css  RemoteConnectModal.tsx  ResourceMonitorPanel.module.css  ResourceMonitorPanel.tsx  ScaffoldModal.module.css  ScaffoldModal.tsx  SettingsModal.module.css  SettingsModal.tsx  Sidebar.module.css  Sidebar.tsx  (+14 more)
(+38 files in other folders)
