[package]
name = "mdcodev"
version = "0.1.0"
description = "mdcodeV — IDE for GTA / FiveM scripting"
authors = ["mdcodeV"]
edition = "2021"

[lib]
name = "mdcodev_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[patch.crates-io]
cookie = { path = "../../../patches/cookie" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
mysql = "25"
keyring = { version = "3", features = ["windows-native"] }
